log file ahora
expo-router/babel is deprecated in favor of babel-preset-expo in SDK 50. To fix the issue, remove "expo-router/babel" from "plug
Android Bundling failed 114616ms node_modules\expo-router\entry.js (1199 modules)
 ERROR  SyntaxError: C:\Users\micro\appStream2\app\live-player.tsx: Unexpected token (366:18)

  364 |             setStreamUrl(directStreamUrl);
  365 |           }
> 366 |           return  const [error, setError] = useState<string | null>(null);
      |                   ^
  367 |
  368 |   useEffect(() => {
  369 |     const enableRotation = async () => {
    at toParseError (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parse-error.ts:95:45)
    at TypeScriptParserMixin.raise (C:\Users\micro\appStream2\node_modules\@babel\parser\src\tokenizer\index.ts:1504:19)        
    at TypeScriptParserMixin.unexpected (C:\Users\micro\appStream2\node_modules\@babel\parser\src\tokenizer\index.ts:1544:16)   
    at TypeScriptParserMixin.parseExprAtom (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:1358:22)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\jsx\index.ts:583:22)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:742:23)
    at TypeScriptParserMixin.parseUpdate (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:721:21) 
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:683:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3893:20)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:417:14)
    at TypeScriptParserMixin.parseExprOps (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:429:23)    at TypeScriptParserMixin.parseMaybeConditional (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:384:23)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:301:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3764:22)
    at TypeScriptParserMixin.parseExpressionBase (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:226:23)
    at callback (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:217:39)
    at TypeScriptParserMixin.allowInAnd (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:3192:16) 
    at TypeScriptParserMixin.parseExpression (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:217:17)
    at TypeScriptParserMixin.parseReturnStatement (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1115:28)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:543:21)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseStatementListItem (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:431:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1444:16)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1417:10)
    at TypeScriptParserMixin.parseBlock (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1385:10)  
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:622:21)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseStatementOrSloppyAnnexBFunctionDeclaration (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:451:17)
    at TypeScriptParserMixin.parseIfStatement (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1094:28)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:541:21)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseStatementListItem (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:431:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1444:16)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1417:10)
    at TypeScriptParserMixin.parseBlock (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1385:10)  
    at TypeScriptParserMixin.parseTryStatement (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1205:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:549:21)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseStatementListItem (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:431:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1444:16)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1417:10)
    at TypeScriptParserMixin.parseBlock (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1385:10)  
    at TypeScriptParserMixin.parseFunctionBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:2621:24)
    at TypeScriptParserMixin.parseArrowExpression (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:2562:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:1067:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3724:20)
